tests/neg/typealias/talias-00.ts
/*@ alias Nat = {v: number | 1000 <= v } */

/*@ z :: #Nat */
var z = 12;

